# drf-demo

./: pyproject.toml
drfdemo/: db.sqlite3
drfdemo/app/: models.py  views.py
drfdemo/app/migrations/: 0001_initial.py
drfdemo/drfdemo/: settings.py  urls.py
tests/: test_drf_demo.py
