[tool.poetry]
name = "drf-demo"
version = "0.1.0"
description = ""
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"
Django = "^4.0.5"
django-debug-toolbar = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
